-*- text -*-

User visible changes

2011-03-28

   * Always raise window when fixing it on all workspaces. When moving
     windows between workspaces, this makes us sure we can find it on
     the workspace we're going to. Thanks to Simon Friis for noticing.

2011-03-26

   * You don't have to tell mcwm what keycode generates the MODKEY
     mask anymore (USERKEY_MOD in config.h is gone). mcwm now asks the
     X server what keys generate the mask and also supports several
     keys generating the mask.

   * Stops tabbing around not only if a key generating MODKEY mask is
     lifted but also if another command key is pressed.

2011-03-18

   * Now handles keyboard remapping.

2011-02-23

   * If you change focus window mcwm remembers where we last had
     focus. If you start using MODKEY+Tab to move around the window
     list the first Tab will always bring you to where we last had
     focus.

2011-02-19

   * Resets per window state of max or vertical max when physical
     screen size changes.

   * Doesn't reset x coordinate when unmaxing vertically.

   * Specifically grab the keycodes we use and keycodes + shift
     modifier. Now works OK with xbindkeys.

2010-11-18

   NOTA BENE! Modifier key changed! Now using Mod4 instead of Mod2 for
   key bindnings. I've been using my own key maps for so long that I
   forgot all about NumLock usually being Mod2 and users complained.
   I'm sorry.

2010-11-01

  * Fixed bug. We mangled a list when a window was destroyed on
    another workspace. This would lead to sticky windows that we
    didn't seem to know about. 

    The same code also prepares for the possibility that a window
    might occupy several, but not all, workspaces at the same time. We
    still don't have any user interface to control this, however.

2010-09-08

  * New key: MODKEY + End closes window. Patch from Christian
    Neukirchen, who used MODKEY + ESC instead.

2010-08-23
